--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,16 +21,19 @@
 
         <label class="question">Where do you want to see the most growth in your life right now?</label><br>
         <div class="options">
-            <button type="button" name="growth" value="mental_health">Mental Health</button>
-            <button type="button" name="growth" value="career_growth">Career Growth</button>
+            <button type="button" name="growth" value="health">Health</button>
+            <button type="button" name="growth" value="career">Career</button>
             <button type="button" name="growth" value="relationship">Relationship</button>
+            <button type="button" name="growth" value="personal_development">Personal Development</button>
+            <button type="button" name="growth" value="money">Money</button>
+            <button type="button" name="growth" value="inner_peace">Inner Peace</button>
         </div>
 
         <label class="question">Where do you want to see healing?</label><br>
         <div class="options">
-            <button type="button" name="healing" value="thrive_ability">My ability to thrive in difficult or stress situations</button>
-            <button type="button" name="healing" value="inner_self">My inner, spiritual self</button>
-            <button type="button" name="healing" value="identity_wellbeing">My sense of identity and well being</button>
+            <button type="button" name="healing" value="physical_healing">Physical Healing</button>
+            <button type="button" name="healing" value="mental_healing">Mental Healing</button>
+            <button type="button" name="healing" value="spiritual_healing">Spiritual Healing</button>
         </div>
 
         <label class="question">What colors feel the most attractive to you right now?</label><br>
@@ -44,10 +47,10 @@
 
         <label class="question">What animal captures you?</label><br>
         <div class="options">
-            <button type="button" name="animal" value="sea_turtle">Sea Turtle</button>
-            <button type="button" name="animal" value="blue_whale">Blue Whale</button>
-            <button type="button" name="animal" value="peacock">Peacock</button>
-            <button type="button" name="animal" value="lioness">Lioness</button>
+            <button type="button" name="animal" value="owl">Owl</button>
+            <button type="button" name="animal" value="dolphin">Dolphin</button>
+            <button type="button" name="animal" value="butterfly">Butterfly</button>
+            <button type="button" name="animal" value="wolf">Wolf</button>
         </div>
 
         <input type="submit" value="Submit" class="submit-btn">
